[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name =  "dsar"
version = "2.1.0"
authors = [
    {name = "Martanto", email = "martanto@live.com"},
    {name = "Corentin Caudron", email = "corentin@ulb.be"},
]
description = "Calculating Displacement Seismic Amplitude Ratio (DSAR)"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["seismic", "volcano", "volcanology", "dsar"]
requires-python = ">=3.10"
dependencies = [
    "obspy>=1.4.2",
    "pandas>=2.0,<3.1",
    "matplotlib>=3.9.0",
    "typing_extensions>=4.0.0",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[dependency-groups]
dev = [
    "uv-build",
    "ruff",
    "ty",
    "ipykernel",
    "notebook",
    "pytest",
]

[tool.pydocstyle]
convention = "google"
add-ignore = ["D100", "D104"]

[tool.uv]
cache-dir = "./.cache"
build-constraint-dependencies = ["setuptools==80.8.0"]

[project.urls]
Homepage = "https://github.com/martanto/dsar"
Issues = "https://github.com/martanto/dsar/issues"
